[gd_scene load_steps=3 format=3 uid="uid://byy3gbb7jx8by"]

[ext_resource type="Script" path="res://addons/scene_task_tracker/UI/task_item_bt.gd" id="1_6rc8t"]
[ext_resource type="Texture2D" uid="uid://cktd6wyd78ani" path="res://addons/scene_task_tracker/icons/copy.svg" id="2_y3aml"]

[node name="HBoxContainer" type="HBoxContainer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.045
offset_bottom = -0.160002
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_6rc8t")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TaskTypeIcon" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 3

[node name="PriorityLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "5"

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="StatusIcon" type="TextureRect" parent="MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="FixedCheckBox" type="CheckBox" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
disabled = true
flat = true

[node name="CopyDescrButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Copy description to clipboard"
icon = ExtResource("2_y3aml")
flat = true

[node name="DescriptionLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Fix: a thing that is wrong. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
clip_text = true
text_overrun_behavior = 3

[node name="DescriptionButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Fix: some broken thing"
flat = true
alignment = 0
text_overrun_behavior = 3

[connection signal="pressed" from="CopyDescrButton" to="." method="_on_copy_descr_button_pressed"]
[connection signal="pressed" from="DescriptionButton" to="." method="_on_description_button_pressed"]
